--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Ecommerces is a basic ecommerce app with a shopping cart and checkout.
 
-Things you may want to cover:
+Includes the following:
 
-* Ruby version
+* 'payola-payments' gem for Stripe processing
 
-* System dependencies
+* 'pg_search' gem for searching products
 
-* Configuration
+* Twitter Typeahead for autocomplete on the search
 
-* Database creation
+* Masonry for grid with adaptable row heights
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Bootstrap for panels
